fix team section mobile

--- a/src/app/components/team/team.component.scss
+++ b/src/app/components/team/team.component.scss
@@ -31,6 +31,7 @@
     .content-card {
         flex-direction: column;
         align-items: center;
+        width: 375px;
     }
     .content-card > img {
         width: 300px;
